css: Fix <strong> tag not showing emphasis
Add font-weight exception to example.css for the <strong> tag.
Otherwise, the <body> font-weight of 300 overrides it, removing
any emphasis on the text within.

--- a/example.css
+++ b/example.css
@@ -355,6 +355,10 @@ div.cartouche {
     font-variant: small-caps;
 }
 
+strong {
+    font-weight: 600;
+}
+
 #commentform textarea {
     width: 100%;
     padding: .1em;
